--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+    
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+    body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(237, 232, 208);
+}
+
     header {
     background-color: rgb(0, 76, 153);
     color: rgb(255, 255, 255);
@@ -7,11 +21,20 @@
     box-sizing: border-box;
 }
 
-    nav ul {
-        text-align: center;
-        padding-left: 0px;
+
+
+nav ul {
+    text-align: center;
+    padding-left: 0px;
+    font-family: arial-label, sans-serif;
 }
 
+    .conteudo-principal {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    min-height: calc(100vh - 60px);
+}
     .main-image {
     max-width: 50%;
     height: auto;
@@ -19,13 +42,8 @@
     margin: 0%;
 }
     
-    body {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(237, 232, 208);
-}
 
-    div #page{
+    #page{
     margin: 0px 100px;
     display: flex;
     flex-direction: column;
@@ -46,9 +64,20 @@
     padding-left: 0px 20px;
 }
 
-    ul #ingredientes {
-    list-style-type: none;
+    ul#lista-ingredientes {
     padding-left: 20px;
+}
+
+    ul#lista-ingredientes li {
+    list-style-type: disc;
+    margin-bottom: 5px;
+}
+
+footer {
+    margin-top: 30px;
+    font-size: 12px;
+    color: #666;
+    text-align: center;
 }
 
 
