--- a/style.css
+++ b/style.css
@@ -75,8 +75,42 @@
         font-family: "Google Sans Flex", sans-serif;
         font-size: 20px;
         line-height: 1.6;
-        padding-bottom: 20px;
+        padding-bottom: 100px;
     }
+
+    .preparacao-wrapper {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-gap: 15px;
+    justify-items: center;
+    padding: 20px;
+    }
+    
+    #relogio {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        gap: 40px;
+    }
+
+    #atributos-de-preparacao-agrupados{
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        gap: 40px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+        font-family: "squada one", sans-serif;
+        font-size: 28px;
+
+    }
+
+
+    #relogio img, 
+    #atributos-de-preparacao-agrupados li {
+    width: 150px; /* Mesma largura para alinhar */
+    }
+
 
 #cabeçalho-menu li {
     padding: 10px 15px;
@@ -85,17 +119,17 @@
     cursor: pointer;
     transition: all 0.3s ease;
     border-radius: 5px;
-}
+    }
+
 #cabeçalho-menu li:hover {
     color: #ffffff;
     text-underline-offset: #fff;
-    text-decoration: underline;
-    
-}
+    text-decoration: underline;  
+    }
 
     #andar-topo {
         display: flex;
-}
+    }
     /*#andar-baixo {
         display: flex;
         margin-bottom: 20px;
