--- a/style.css
+++ b/style.css
@@ -13,34 +13,58 @@
     }
 
     header {
-        /* position: fixed; */
+        position: fixed;
         inset: 0;
-        height: 138px;
+        height: 114px;
         width: 100%;
         background-color: #004679;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: black 0px 0px 10px 10px;
+        z-index: 1;
     }
 
-    .logo {
-    }
-
-    .navbar {
     
+    .navbar {
+        height: 114px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        list-style: none;
+        padding-bottom: 45px;
     }
-
+    
+    .logo {
+        height: 72px;
+        width: 138px;
+        margin-left: 20px;
+        padding: 4px;
+    }
     .menu {
         display: flex;
-        justify-content: space-evenly;
-
+        list-style: none;
+        gap: 60px;
+        align-items: last baseline;
+        color: white;
+        font-size: 24px;
     }
 
     .conteudo-principal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+        display: flex;
+        flex-direction: column;
     }
 
     .breadcrumbs {
-
+        position: absolute;
+        top: 114px;
+        left: 0;
+        width: 100%;
+        padding: 20px;
+        color: white;
+        display: flex;
+        gap: 10px;
+        text-decoration: none;
     }
 
     .andar-topo {
@@ -48,18 +72,22 @@
     }
     
     .page{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
     }
 
     .principal-content{
-
+        display: flex;
+        flex-direction: column;
     }
 
     #main-image {
-        max-width: 50%;
-        height: auto;
-        margin: 0%;
-        padding: 0%;
+        display: flex;
+        flex-direction: column;
+        height: 889px;
+        width: 50%;
     }
 
     .recipe-name {
